# statements

./: .windsurfrules
bank-statement-api/: .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini  sample_transactions.csv  test_output.csv
bank-statement-api/data/: sources.csv
bank-statement-api/data/statements/: ForUpload.csv
bank-statement-api/docs/: api_routes_and_deduplication.md  bankstatements_public_categories.csv  categories.csv  possible_categories.md  todo.md
bank-statement-api/docs/architecture/: backend.md  ci-cd.md
bank-statement-api/docs/features/: 5.create-new-upload-page.md  6.1 fix  6.statement_upload_workflow.md  7.improve_statement_upload_workflow.md  add_sub_category_id.md  delayed_categorization.md  existing_transactions_categories.md  uploaded_file_processing.md
bank-statement-api/migrations/: env.py
bank-statement-api/migrations/versions/: 25188a7e8dba_create_sources_table_and_update_.py  412cf2311285_make_source_id_non_nullable_with_default.py  4796b9d1bcd8_initial_migration.py  62f711d69ee6_initial_migration_with_ordered_columns.py  7ec307fd117b_add_statement_and_statement_schema_.py  836154eb6995_add_normalized_description_to_.py  85a74cd6fd3a_rename_column_hash_to_statement_hash_.py  a1bcfeccb55c_rename_schema_to_schema_data.py  b6d9462d609f_add_categorization_status_to_.py  e902f1403a16_add_source_id_to_transactions.py  ec6da67186a0_rename_statement_schemas_table_to_.py  f00b69df99ba_add_sub_category_id_to_transactions.py
bank-statement-api/scripts/: analyze_transactions.sh  fix_all.sh  get_transactions.sh  kill_celery.sh  list_celery_tasks.sh  reset_tables.py  run_categorization.sh  run_celery.sh  run_celery_and_beat.sh  run_celery_beat.sh  trigger_categorization.sh  upload_categories.sh  upload_sources.sh  upload_transactions.sh
bank-statement-api/src/: transaction_categorizer.py
bank-statement-api/src/app/: celery_app.py  db.py  main.py  models.py  schemas.py
bank-statement-api/src/app/ai/: gemini_ai.py  gemini_pro.py  groq_ai.py  t.py  test-gemini.py  test_gemini.py
bank-statement-api/src/app/logging/: config.py  dynamic_file_handler.py
bank-statement-api/src/app/repositories/: categories_repository.py  sources_repository.py  statement_repository.py  statement_schema_repository.py  transactions_repository.py
bank-statement-api/src/app/routes/: categories.py  categorization.py  sources.py  transactions.py  transactions_upload.py  upload.py
bank-statement-api/src/app/services/: categorizer.py  (+3 more)
bank-statement-api/tests/: conftest.py  test_api.py  test_categorizer.py  test_categorizers.py  test_embedding.py  test_existing_transactions_categorizer.py  test_file_processor.py  test_gemini.py  test_groq.py  test_int_gemini.py  test_int_groq.py  test_rule_based.py  test_sources.py
bank-statement-api/tests/common/: test_json_utils.py
bank-statement-api/tests/repositories/: test_statement_repository.py  test_statement_schema_repository.py
bank-statement-api/tests/resources/: Revolut.csv  Revolut.xlsx  sample.csv  sample.xlsx
bank-statement-api/tests/routes/: test_api.py  test_categories.py  test_sources.py  test_transactions.py
bank-statement-api/tests/schemas/: test_statement_schema_definition.py
(+105 files in other folders)
