[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-statement-api"
version = "0.1.0"
description = "API for processing and categorizing bank statements"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "psycopg2-binary>=2.9.1",
    "pandas>=1.3.3",
    "python-multipart>=0.0.5",
    "pydantic>=1.8.2",
    "sqlalchemy>=1.4.23",
    "alembic>=1.7.3",
    "httpx>=0.23.0",
    "sentence-transformers>=2.6.1"
]

[tool.setuptools]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "black>=21.8b0",
    "isort>=5.9.3",
    "flake8>=3.9.2",
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py38"]
