[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-statement-api"
version = "0.1.0"
description = "API for processing and categorizing bank statements"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "accelerate>=1.6.0",
    "alembic>=1.7.3",
    "fastapi>=0.68.0",
    "google-genai>=1.9.0",
    "google-generativeai>=0.8.4",
    "httpx>=0.23.0",
    "pandas>=1.3.3",
    "psycopg2-binary>=2.9.1",
    "pydantic>=1.8.2",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.5",
    "sentence-transformers>=4.0.2",
    "sqlalchemy>=1.4.23",
    "transformers>=4.51.0",
    "uvicorn>=0.15.0",
]

[tool.setuptools]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "black>=21.8b0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "ruff>=0.11.4"
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py38"]
