[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-statement-api"
version = "0.1.0"
description = "API for processing and categorizing bank statements"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "accelerate>=1.6.0",
    "alembic>=1.7.3",
    "celery>=5.5.1",
    "fastapi>=0.68.0",
    "google-genai>=1.9.0",
    "google-generativeai>=0.8.4",
    "httpx>=0.23.0",
    "groq>=0.22.0",
    "openai>=1.72.0",
    "pandas>=1.3.3",
    "psycopg2-binary>=2.9.1",
    "pydantic>=1.8.2",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.5",
    "redis>=5.2.1",
    "sentence-transformers>=4.0.2",
    "sqlalchemy>=1.4.23",
    "transformers>=4.51.0",
    "uvicorn>=0.15.0",
]

[tool.setuptools]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "black>=21.8b0",
    "isort>=6.0.1",
    "ruff>=0.11.4"
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88